Compilation warnings in openxavatest cleared